@@ -1,6 +1,7 @@
 - decorators created with @decorator are now able to pass additional args and kwargs
 - @collecting, @joining() and @limit_error_rate() now exported directly from funcy
 - @tap(), @log_calls and @log_errors() now exported directly from funcy
+- added @print_calls and @print_errors
 - better handling passing None to optional parameter
 Backward incompatible changes:
 - @log renamed to @log_calls
